network/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-lan
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`tfdash.nite.name`)
      kind: Rule
#      middlewares:
#        - name: traefik-dashboard-basicauth
#          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
#---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: traefik-redirect
#  namespace: traefik
#  annotations: 
#    kubernetes.io/ingress.class: traefik-external
#spec:
#  entryPoints:
#    - web
#  routes:
#    - match: Host(`traefik.nite.name`)
#      kind: Rule
#      middlewares:
#        - name: https-redirect
#          namespace: traefik
#      services:
#        - name: api@internal
#          kind: TraefikService
